# ScreenYOLO-Android

./: README.md  TRIGGER.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  yolov8ncnn.cpp
app/src/main/java/com/example/screenyolo/: AppLogger.kt  BitmapPool.kt  CaptureRegion.kt  Detection.kt  Detector.kt  LogActivity.kt  LogAdapter.kt  LogManager.kt  MainActivity.kt  NcnnDetector.kt  OverlayService.kt  OverlayView.kt  PerformanceMonitor.kt  ScreenCaptureService.kt  YoloDetector.kt
app/src/main/java/com/example/screenyolo/engine/: InferenceEngine.kt  NcnnEngine.kt  OnnxEngine.kt  TFLiteEngine.kt
app/src/main/res/drawable/: bg_logo_circle.xml  bg_spinner.xml  btn_danger.xml  btn_gradient_start.xml  btn_primary.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_log.xml  activity_main.xml  item_log_entry.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
log/: screenyolo_log_20260424.txt
